Bug 916714 - Fix a faulty assertion in TextureHost - r=jrmuizel